--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 Flask==2.3.3
 Flask-CORS==4.0.0
-Flask-SQLAlchemy==3.0.5
+Flask-SQLAlchemy==2.5.1
+SQLAlchemy==1.4.46
+Werkzeug==2.3.7
+gunicorn==21.2.0
